Created object of first instance in list